# simpleParser

./: .gitmodules  CMakeLists.txt
cfg/: config.ini
inc/: Parser.h
src/: Parser.cc
test/src/: main.cc
