CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#About project
#---------------------
SET(PROJECT_NAME simpleParser)
PROJECT (${PROJECT_NAME})
SET(VERSION_MAJOR "1")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(CMAKE_CXX_FLAGS "-fPIC -g -Wall")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES (inc)

SET(LIB_SRC ${PROJECT_SOURCE_DIR}/src/Parser.cc) 

#####################################
# Libraries 
#####################################
ADD_LIBRARY(simpleParser STATIC ${LIB_SRC}) 
